--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HarmonicDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=HarmonicDb;Username=Alfred;Password=SecurePassword123", // replace password in production
+    "DefaultConnectionSqlite": "Server=(localdb)\\mssqllocaldb;Database=HarmonicDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "Key": "c7584bc5d6d99fd712f4ffc7e3035d63", // debug key, replace in production
